# ftp-server-minimal

./: CMakeLists.txt  ftpd.c  ftpd.h  ftpd_util.c  ftpd_util.h  ftpd_vfs.c  ftpd_vfs.h  main.c  mod_ftpd.c  mod_home.c  mod_mnt.c  mod_root.c  mod_tmp.c  scap.c  scap.h
